Changes from jTDS 1.2.6
=======================

08/16/2012 - Holger Rehn
 o Removed WebRing code from the project web site (Bug #660).


|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
||                                                                           ||
||                      SourceForge Project Upgrade                          ||
||																			 ||
|| The previous tracker item IDs have been replaced by individual bug/patch  ||
|| IDs and are no longer valid.                                              ||
||                                                                           ||
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||


===============================================================================
08/15/2012 - jTDS 1.2.6 released
===============================================================================

Changes from jTDS 1.2.5
=======================

08/15/2012 - Holger Rehn
 o Applied patch [3048203] by amallon, adding a new 'autoCommit' connection
   property to override the auto commit default for newly created connections.
 o Commented out tests not compatible with Java 1.4, that have been added since
   the jTDS 1.2.5 release.
 o Adopted build scripts to exclude test classes from distro.

03/22/2012 - Holger Rehn
 o Applied patch [3476715] for bug [3260570] provided by Apaali, parsing
   time values containing fractions of seconds may fail.
 o Applied fix [3436324] suggested by Shane StClair, JtdsStatement.close()
   failed due to invalid state.

09/04/2011 - Holger Rehn
 o Applied patch [3290370] by Maarten van der Zwaart, re-send UDP recovery
   packet when connecting an SQL Server by instance name.
 o Applied patch [3224480] by Shane StClair, adding support for spatial types
   geometry/geography for TDS versions greater than 7.0.
 o Applied patch [3307731] by Rainer Schwarze, ResultSet cancellation may cause
   connection to be closed.